--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Tiago Rosa da costa",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
   },
