--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Api blog",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets es2015,stage-2",
+    "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
+    "start:dev": "nodemon index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2"
   }
 }
