--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
     "start:dev": "nodemon index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/**/*.spec.js NODE_ENV=test"
   },
   "keywords": [
     "blog",
@@ -24,6 +24,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "sinon": "^6.0.0"
   }
 }
