--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Tiago Rosa da costa",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
