--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
     "start:dev": "nodemon index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
-    "test": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/**/*.spec.js NODE_ENV=test"
+    "test": "NODE_ENV=test mocha --no-colors --require babel-core/register --require babel-polyfill ./test/**/*.spec.js"
   },
   "keywords": [
     "blog",
