--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
-    "start:dev": "nodemon index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
+    "start:dev": "nodemon ./src/index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
     "test": "NODE_ENV=test mocha --no-colors --require babel-core/register --require babel-polyfill ./test/**/*.spec.js"
   },
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
   },
