--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
     "start:dev": "nodemon ./src/index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
-    "test": "NODE_ENV=test mocha --no-colors --require babel-core/register --require babel-polyfill ./test/**/*.spec.js"
+    "test:unit": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/unit/**/*.spec.js",
+    "test:integration": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/integration/**/*.spec.js",
+    "test": "NODE_ENV=test npm run test:unit && npm run test:integration"
   },
   "keywords": [
     "blog",
@@ -28,6 +30,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "sinon": "^6.0.0"
+    "sinon": "^6.0.0",
+    "supertest": "^3.1.0"
   }
 }
