Init class AutenticacaoService

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
 URL_DB=mongodb://localhost:27017/blog
+TOKEN_SECRET=blogapidev
+ACCESS_TOKEN_TIME_EXPIRED=120s
+REFRESH_TOKEN_TIME_EXPIRED=900s
