--- a/.env-test
+++ b/.env-test
@@ -1,2 +1,5 @@
 PORT=3000
 URL_DB=mongodb://localhost:27017/blog-test
+TOKEN_SECRET=blogapitest
+ACCESS_TOKEN_TIME_EXPIRED=120s
+REFRESH_TOKEN_TIME_EXPIRED=900s
