--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
     "start:dev": "nodemon ./src/index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
     "build": "babel <dirSource> -d <dirDestine>",
-    "test:unit": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/unit/**/*.spec.js",
-    "test:integration": "mocha --no-colors --require babel-core/register --require babel-polyfill ./test/integration/**/*.spec.js",
+    "test:unit": "mocha --no-colors --opts ./test/mocha.opts ./test/unit/**/*.spec.js",
+    "test:integration": "mocha --no-colors --opts ./test/mocha.opts ./test/integration/**/*.spec.js",
     "test": "NODE_ENV=test npm run test:unit && npm run test:integration"
   },
   "keywords": [
