--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Api blog",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && nodejs ./src/index.js NODE_ENV=prd",
+    "start": "NODE_ENV=prd node ./build/index.js ",
     "start:dev": "nodemon ./src/index.js --exec babel-node --presets es2015,stage-2 NODE_ENV=dev",
-    "build": "babel <dirSource> -d <dirDestine>",
+    "build": "babel ./src -d ./build",
     "test:unit": "mocha --no-colors --opts ./test/mocha.opts ./test/unit/**/*.spec.js",
     "test:integration": "mocha --no-colors --opts ./test/mocha.opts ./test/integration/**/*.spec.js",
     "test": "NODE_ENV=test npm run test:unit && npm run test:integration "
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
