--- a/.env-prd
+++ b/.env-prd
@@ -1,5 +1,5 @@
 PORT=3000
-URL_DB=mongodb://tiago:tiago5rosa4da2costa@ds211558.mlab.com:11558/s3
-TOKEN_SECRET=blogapiprd
-ACCESS_TOKEN_TIME_EXPIRED=120s
-REFRESH_TOKEN_TIME_EXPIRED=900s
+URL_DB=
+TOKEN_SECRET=
+ACCESS_TOKEN_TIME_EXPIRED=
+REFRESH_TOKEN_TIME_EXPIRED=
